# personal_blog

./: LICENSE  README.md  requirements.txt
app/: settings.py  urls.py
backend/: pyproject.toml
backend/backend/: settings.py  urls.py
backend/blog/: models.py  schema.py
backend/blog/migrations/: 0001_initial.py
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/: additional_style.css
blog/templates/: base.html  footer.html  navbar.html
blog/templates/blog/: detail.html  index.html  tag.html
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/querys/: index.js
