[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jeas560 <jeas560@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
markdown = "^3.5.1"
graphene-django = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
